--- a/ferretmagic_test05.ipynb
+++ b/ferretmagic_test05.ipynb
@@ -8,6 +8,16 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<hr>\n",
+      "Patrick BROCKMANN - LSCE (Climate and Environment Sciences Laboratory)<br>\n",
+      "<img width=\"50%\" src=\"http://www.lsce.ipsl.fr/Css/img/banniere_LSCE_75.png\">\n",
+      "<hr>"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
