minor corrections to notebooks

--- a/ferretmagic_test02.ipynb
+++ b/ferretmagic_test02.ipynb
@@ -13,7 +13,7 @@
      "source": [
       "<hr>\n",
       "Patrick BROCKMANN - LSCE (Climate and Environment Sciences Laboratory)<br>\n",
-      "<img width=\"50%\" src=\"http://www.lsce.ipsl.fr/Css/img/banniere_LSCE_75.png\">\n",
+      "<img align=\"left\" width=\"40%\" src=\"http://www.lsce.ipsl.fr/Css/img/banniere_LSCE_75.png\" \\><br><br>\n",
       "<hr>"
      ]
     },
