add install_ext instruction

--- a/ferretmagic_03_GetAndPutData.ipynb
+++ b/ferretmagic_03_GetAndPutData.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b73e5f223fa805fd2b693d1f605b3902a251a710f3f71e06e76567580fb5b8fe"
+  "signature": "sha256:0d8f26cd3fd46cdd8f0420f6444da0ea09944b80030d4b895eb1cfac23a9e553"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,10 +27,18 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "*If not installed yet, type:\n",
+      "%install_ext https://raw.github.com/PBrockmann/ipython-ferretmagic/master/ferretmagic.py*"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%reload_ext ferretmagic"
+      "%load_ext ferretmagic"
      ],
      "language": "python",
      "metadata": {},
