--- a/ferretmagic_02_PassDataFromFerretToPython.ipynb
+++ b/ferretmagic_02_PassDataFromFerretToPython.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:23d789e8a8bd9968917de6a28fa447522081a552bc89a59c95cf4e70c98d78c1"
+  "signature": "sha256:f0e4674d6bce257d5f67160d7de2753164acecdda095b0efad1e51d6d1071421"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -27,6 +27,14 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "*If not installed yet, type:\n",
+      "%install_ext https://raw.github.com/PBrockmann/ipython-ferretmagic/master/ferretmagic.py*"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -34,7 +42,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Installed ferretmagic.py. To use it, type:\n",
+        "  %load_ext ferretmagic\n"
+       ]
+      }
+     ],
      "prompt_number": 1
     },
     {
