--- a/ferretmagic_01_Discovering.ipynb
+++ b/ferretmagic_01_Discovering.ipynb
@@ -30,16 +30,16 @@
    "source": [
     "<del>%install_ext https://raw.github.com/PBrockmann/ipython-ferretmagic/master/ferretmagic.py</del>\n",
     "\n",
-    "<b>install_ext</b> has been deprecated in last jupyter notebook (4.1) but at the same time, pyferret (7.0) is now available from conda-forge and distribute nicely the ferretmagic extension.\n",
+    "<b>install_ext</b> has been deprecated in last Jupyter notebook (4.1) but at the same time, PyFerret (7.0) is now available from conda-forge with the ferretmagic extension.\n",
     "\n",
     "So proceed as indicated in https://anaconda.org/conda-forge/pyferret\n",
     "<pre>conda install -c conda-forge pyferret=7.0</pre>\n",
     "\n",
-    "but first, you need to install pyferret as usual to get all fonts, ppl, ... and datasets directories as well.\n",
+    "but first, you need to install PyFerret as usual to get all fonts, ppl, ... and datasets directories as well.\n",
     "So please follow instructions from the PMEL web site:\n",
     "http://ferret.pmel.noaa.gov/Ferret/downloads/pyferret/\n",
     "\n",
-    "Download, untar, run Finstall to set the path. Add the loading of the ressource file (ferret_paths.sh) to your initialisation file (.bashrc) and that's it you are ready to use pyferret from jupyter notebooks."
+    "Download, untar, run Finstall to set the path. Add the loading of the ressource file (ferret_paths.sh) to your initialisation file (.bashrc) and that's it you are ready to use PyFerret from Jupyter notebooks."
    ]
   },
   {
