--- a/ferretmagic_01_Discovering.ipynb
+++ b/ferretmagic_01_Discovering.ipynb
@@ -590,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Usage and urrent options"
+    "#### Usage and current options"
    ]
   },
   {
