--- a/ferretmagic_01_Discovering.ipynb
+++ b/ferretmagic_01_Discovering.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "<del>%install_ext https://raw.github.com/PBrockmann/ipython-ferretmagic/master/ferretmagic.py</del>\n",
     "\n",
-    "<b>install_ext</b> has been deprecated in last Jupyter notebook (4.1) but at the same time, PyFerret (7.0) is now available from conda-forge with the ferretmagic extension.\n",
+    "<b>install_ext</b> has been deprecated in last Jupyter notebook (4.1) but at the same time, PyFerret (7.0) is now available from conda-forge with the ferretmagic extension included.\n",
     "\n",
     "So proceed as indicated in https://anaconda.org/conda-forge/pyferret\n",
     "<pre>conda install -c conda-forge pyferret=7.0</pre>\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
