Updates for python 3.7

--- a/notebooks/ferretmagic_04_Monitoring.ipynb
+++ b/notebooks/ferretmagic_04_Monitoring.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Updated: 2018/12/10"
+    "Updated: 2019/11/13"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
     "\"http://vesg.ipsl.upmc.fr/thredds/dodsC/work/p86caub/IPSLCM6/PROD/historical/CM61-LR-hist-03.1950-REDO-1900/MONITORING/files/ATM_precip_global_ave.nc\",\n",
     "\"http://vesg.ipsl.upmc.fr/thredds/dodsC/work/p86caub/IPSLCM6/PROD/historical/CM61-LR-hist-03.1950-REDO-1950/MONITORING/files/ATM_precip_global_ave.nc\",\n",
     ")\n",
-    "print len(listfiles)"
+    "print(len(listfiles))"
    ]
   },
   {
@@ -93,7 +93,7 @@
    ],
    "source": [
     "for f in listfiles:\n",
-    "    print f\n",
+    "    print(f)\n",
     "    %ferret_run 'use \"%s\"' % f"
    ]
   },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -165,33 +165,26 @@
     "\n",
     "plot/color/thick=3/grat=(dash,color=6)/key=title var1, var2, var3"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
